--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>Frontend Starter</title>
+    <title>HW14.1</title>
   </head>
   <body>
-    <h1>Frontend Starter</h1>
+    <h1>Filter Render Price</h1>
     <script src="./scripts.js" type="module"></script>
   </body>
 </html>
