--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
   </head>
   <body>
     <h1>Filter Render Price</h1>
+    <div>
+      <form>
+        <label for="value">Maximum Price</label>
+        <input type="number" id="value"/>
+      </form>
+    </div>
     <script src="./scripts.js" type="module"></script>
   </body>
 </html>
