--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <h1>Filter Render Price</h1>
     <div>
       <form>
-        <label for="value">Maximum Price</label>
-        <input type="number" id="value"/>
+        <label for="maxPrice">Maximum Price</label>
+        <input type="number" id="maxPrice" />
       </form>
     </div>
     <script src="./scripts.js" type="module"></script>
