--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <h1>Filter Render Price</h1>
-    <div>
+    <div class="flex flex--justify-content">
       <form>
         <label for="max">Maximum Price</label>
         <input type="number" id="max" />
