--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <form>
         <label for="max">Maximum Price</label>
         <input type="number" id="max" />
+        <label for="stock">In Stock Only</label>
+        <input type="checkbox" id="stock" />
+        <label for="search">Search By Name</label>
+        <input type="text" id="search" />
       </form>
     </div>
     <script src="./scripts.js" type="module"></script>
