--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
     <div class="flex flex--justify-content">
       <form>
         <label for="max">Maximum Price</label>
-        <input type="number" id="max" />
+        <input type="number" id="max" /> <br />
+
+        <label for="search">Search By Name</label>
+        <input type="text" id="search" /> <br />
+
         <label for="stock">In Stock Only</label>
         <input type="checkbox" id="stock" />
-        <label for="search">Search By Name</label>
-        <input type="text" id="search" />
       </form>
     </div>
     <script src="./scripts.js" type="module"></script>
